--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   font-size: 1em;
   line-height: 1.5;
+  font-family: "Outfit", sans-serif;
 }
 
 body {
@@ -25,6 +26,7 @@ img {
   width: 20rem;
   color: hsl(215, 51%, 70%);
   margin: 1rem auto;
+  font-weight: 300;
 }
 .container img {
   border-radius: 1rem;
@@ -34,6 +36,7 @@ h1 {
   color: white;
   font-size: 18px;
   padding: 1rem 0;
+  font-weight: 600;
 }
 
 .num {
@@ -59,6 +62,7 @@ h1 {
   justify-content: flex-start;
   align-items: center;
   color: hsl(215, 51%, 70%);
+  font-weight: 300;
 }
 .profile img {
   width: 2rem;
